# learn-cmake

./: .gitignore  CMakeLists.txt  CreateSimpleProject.md  README.md  cmake-generators-info.md
Primer-2/: function1.cpp  main.cpp
Primer-2/headers/: anotherHeader.h
Primer-3-Library/: displayMessage.cpp  getCPPVersion.cpp  main.cpp
Primer-3-Library/headers/: displayMessage.hpp  getCPPVersion.hpp
Start-1/: main.cpp  printMessage.cpp
Start-1/headers/: MyHeader.h
cmake101/: CMakeLists.txt  README.md
cmake101/customLib1/: CMakeLists.txt  sayHello.cpp  sayHello.h
cmake101/entryPoint/: CMakeLists.txt  main.cpp
ninja/: CMakeCache.txt  build.ninja  cmake_install.cmake  info about ninja.md
